src/objects/FLAGS__FlagPref__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Case Flag Preferences as set by the user in the Case Flag Setup Wizard.</description>
    <fields>
        <fullName>FLAGS__AllowClearAfterActivity__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable the clearing of the Case Flag when a closed activity is added.

Set in the Case Flags Setup Wizard.</description>
        <label>Allow clear after activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLAGS__AllowClearAfterComment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable the clearing of the Case Flag after a public comment has been added to Case. 

Set in the Case Flags Setup Wizard.</description>
        <label>Allow clear after comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLAGS__AllowClearAfterEmail__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable the clearing of the Case Flag after an email has been sent from the Case. 

Set in the Case Flags Setup Wizard.</description>
        <label>Allow clear after email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLAGS__AllowWriteAfterAttachment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable the Case Flag to automatically be set on immediately after an attachment has been added to Case by an external user. 

Set in the Case Flags Setup Wizard.</description>
        <label>Allow write after attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLAGS__AllowWriteAfterComment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable the Case Flag to automatically be set on immediately after a comment has been added to Case.

Set in the Case Flags Setup Wizard.</description>
        <label>Allow write after comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLAGS__AllowWriteAfterEmail__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable the Case Flag to automatically be set on immediately after an email has been received for the Case.

Set in the Case Flags Setup Wizard.</description>
        <label>Allow write after email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLAGS__AllowWriteAfterFile__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable the Case Flag to automatically be set immediately after a file has been added to a Case by an external user. 

Set in the Case Flags Setup Wizard.</description>
        <label>Allow write after file</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLAGS__Auto_Response_Email_Threshold__c</fullName>
        <defaultValue>5</defaultValue>
        <description>The number of seconds after case creation that an outbound email is considered an autoreply and does not clear the flag.</description>
        <label>Auto Response Email Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__BlankOffsetImage__c</fullName>
        <description>Id of image Document to be displayed in the Case Flag field when the flag is off.

Set in the Case Flags Setup Wizard.</description>
        <label>Blank Offset Image</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Business_Hours_Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <description>The number of records that each batch of the business hours job will process.</description>
        <label>Business Hours Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__BypassSharing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bypass sharing rules for specific use cases where access rights cannot be granted.</description>
        <label>Bypass Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLAGS__ClearOnCaseClose__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable the clearing of the Case Flag after the Case closes. 

Set in the Case Flags Setup Wizard.</description>
        <label>Clear On Case Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLAGS__CompanyDomain__c</fullName>
        <description>The domain of the user&apos;s company needed to distinguish emails between users and their customers.

Set in the Case Flags Setup Wizard.</description>
        <label>Company Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Enable_History__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLAGS__EnabledActivityType__c</fullName>
        <label>EnabledActivityType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__ExamineCommentCompanyDomain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Examine Comment for Company Domain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLAGS__ExcludedUsers__c</fullName>
        <description>A comma separated list of user ids which should not clear the case flag when adding a comment.

Set in the Case Flags Setup Wizard.</description>
        <label>Excluded Users</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Initial_Comment_Threshold__c</fullName>
        <label>Initial Comment Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__InsertTriggerErrorComments__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable a private comment to be added to the Case if a trigger is unable update the Case Flag field due to error.</description>
        <label>Insert Trigger Error Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLAGS__JobId__c</fullName>
        <description>Id of Schedule Apex &quot;Case Flags Job&quot; needed for updating business hours every day.</description>
        <label>JobId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Offset1Description__c</fullName>
        <defaultValue>&quot;Flag Level 1&quot;</defaultValue>
        <label>Age 1 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Offset1Hex__c</fullName>
        <defaultValue>&quot;0000FF&quot;</defaultValue>
        <description>Color for flag 1</description>
        <label>Age 1 Hex</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Offset1Image__c</fullName>
        <description>Id of image Document to be displayed in the Case Flag field after Age 1 Hours has lapsed. Set in the Case Flags Setup Wizard.</description>
        <label>Age 1 Image</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Offset2Description__c</fullName>
        <defaultValue>&quot;Flag Level 2&quot;</defaultValue>
        <label>Age 2 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Offset2Hex__c</fullName>
        <defaultValue>&quot;FFA500&quot;</defaultValue>
        <description>Color for flag 2</description>
        <label>Age 2 Hex</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Offset2Image__c</fullName>
        <description>Id of image Document to be displayed in the Case Flag field after Age 2 Hours has lapsed. Set in the Case Flags Setup Wizard.</description>
        <label>Age 2 Image</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Offset3Description__c</fullName>
        <defaultValue>&quot;Flag Level 3&quot;</defaultValue>
        <label>Age 3 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Offset3Hex__c</fullName>
        <defaultValue>&quot;FF0000&quot;</defaultValue>
        <description>Color for flag 3</description>
        <label>Age 3 Hex</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Offset3Image__c</fullName>
        <description>Id of image Document to be displayed in the Case Flag field after Age 3 Hours has lapsed. Set in the Case Flags Setup Wizard.</description>
        <label>Age 3 Image</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Organization_Wide__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Organization Wide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLAGS__SetOnCaseCreate__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable the Case Flag to automatically be set on immediately after a Case has been created.

Set in the Case Flags Setup Wizard.</description>
        <label>Set On Case Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLAGS__TimeOffset1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The amount of hours to wait before displaying Age 1 Image in the Case Flag field. Set in the Case Flags Setup Wizard.</description>
        <label>Age 1 Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__TimeOffset2__c</fullName>
        <defaultValue>4</defaultValue>
        <description>The amount of hours to wait before displaying Age 2 Image in the Case Flag field. Set in the Case Flags Setup Wizard.</description>
        <label>Age 2 Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__TimeOffset3__c</fullName>
        <defaultValue>8</defaultValue>
        <label>Age 3 Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__Track_Case_Ownership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Case Ownership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLAGS__Track_Case_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Case Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLAGS__Track_Flag_Clear__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Flag Clear</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLAGS__Track_Flag_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Flag Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLAGS__UseFuture__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Move the logic to set the custom Business Hours lookup on new cases to Apex Future methods.</description>
        <label>Use Future</label>
        <type>Checkbox</type>
    </fields>
    <label>Case Flag Preferences</label>
</CustomObject>